--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #fff;
+}
+
+.fondoAzul {
+  background-color: rgb(40, 40, 140);
+  color: #fff;
+}
+
+.item-jumbotron {
+  background-color: rgb(190, 190, 190) ;
+}
+
+.lista-footer {
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+  color: #000;
 }
