--- a/src/index.css
+++ b/src/index.css
@@ -30,10 +30,10 @@ a{
 .botones {
   border: 2px solid rgb(40, 40, 140);
   background-color: #fff;
-  padding: 15px;
+  padding: 8px 10px;
   color: #000;
   box-shadow: inset 0 0 5px rgb(40, 40, 140);
-  text-shadow: 0 0 15px #000;
+  text-shadow: 0 0 20px #000;
   font-weight: bolder;
 }
 
