--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
+html {
+  box-sizing: border-box;
 }
 
 body {
@@ -35,17 +40,6 @@ a{
   box-shadow: inset 0 0 5px rgb(40, 40, 140);
   text-shadow: 0 0 20px #000;
   font-weight: bolder;
-}
-
-.boton-subir {
-  z-index: 15;
-  position: fixed;
-  bottom: 50px;
-  right: 50px;
-  background-image: linear-gradient(to top, rgb(40, 40, 140) 0%, rgb(80, 80, 255) 100%);
-  border-radius: 100%;
-  border: solid 2px #fff;
-  box-shadow: 0 0 15px rgb(40, 40, 140);
 }
 
 .sombra {
